[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/map.gd" type="Script" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/next_items.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/label.tscn" type="PackedScene" id=7]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 0.561218, 1.12247 )
texture = ExtResource( 2 )
centered = false

[node name="map" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 5 )]

[node name="advance_timer" type="Timer" parent="."]
autostart = true

[node name="next_items" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 140 )

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="score" parent="." instance=ExtResource( 7 )]
position = Vector2( 88, 140 )

[node name="time" parent="." instance=ExtResource( 7 )]
position = Vector2( 192, 140 )
[connection signal="timeout" from="advance_timer" to="." method="_on_advance_timer_timeout"]
[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
